feat(email): support message attachments
